Configurada autenticação e autorização.